--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -898,6 +898,8 @@
                                         image</option>
                                     <option value="POST|/api/whatsapp/chats/send-document">POST /chats/send-document -
                                         Send document</option>
+                                    <option value="POST|/api/whatsapp/chats/send-audio">POST /chats/send-audio - Send
+                                        audio/voice note</option>
                                     <option value="POST|/api/whatsapp/chats/send-location">POST /chats/send-location -
                                         Send location</option>
                                     <option value="POST|/api/whatsapp/chats/send-contact">POST /chats/send-contact -
@@ -1073,7 +1075,7 @@
                 <strong>Chatery API</strong> - WhatsApp Multi-Session Gateway
             </div>
             <div style="font-size: 12px; color: var(--text-muted); margin-bottom: 8px;">
-                📊 <strong>Fitur:</strong> Text, Image, Document, Location, Contact, Poll, Bulk Messaging, Reply Messages
+                📊 <strong>Fitur:</strong> Text, Image, Document, Audio, Location, Contact, Poll, Bulk Messaging, Reply Messages
             </div>
             <div style="font-size: 12px; color: var(--text-muted);">
                 © <span id="footerYear"></span> Chatery. Open Source under MIT License.
@@ -1774,6 +1776,16 @@
                     replyTo: null
                 };
                 helpText = '📄 <code>caption</code>: Optional text caption. <code>mimetype</code>: MIME type. <code>replyTo</code>: Message ID to reply to (optional).';
+            } else if (path.includes('/chats/send-audio')) {
+                body = {
+                    sessionId: '',
+                    chatId: '628123456789',
+                    audioUrl: 'https://example.com/audio.ogg',
+                    ptt: true,
+                    typingTime: 0,
+                    replyTo: null
+                };
+                helpText = '🎵 <b>OGG format required!</b> <code>audioUrl</code>: Direct URL to .ogg audio file. <code>ptt</code>: true = voice note, false = audio file. Convert: <code>ffmpeg -i input.mp3 -c:a libopus output.ogg</code>';
             } else if (path.includes('/chats/send-location')) {
                 body = {
                     sessionId: '',
