--- a/public/admin.html
+++ b/public/admin.html
@@ -7,7 +7,7 @@
     <title>Chatery Dashboard - WhatsApp API</title>
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link href="/assets/style.css" rel="stylesheet">
+    <link href="/assets/admin.css" rel="stylesheet">
 </head>
 
 <body>
@@ -384,7 +384,7 @@
 
     <!-- Toast Container -->
     <div class="toast-container" id="toastContainer"></div>
-    <script src="/assets/scripts.js"></script>
+    <script src="/assets/admin.js"></script>
 </body>
 
 </html>
